* FIXED: Toolbar buttons order
* FIXED: Argument forwarding in kiwix-launcher
* FIXED: Copy to clipboard if inverted colors (#414)
* FIXED: "Select all" with inverted colors
* FIXED: Browser widget resizing sync. with the window (#382)
* FIXED: Encoding issue in kiwix-serve 404 error message
* FIXED: Abstruse index names (#84)
* FIXED: Compilation configuration for Gecko SDK 17+
* NEW: New supported user interface languages: Chuvash (cv), Fiji
  Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
  Sanskrit (sa), Uzbek (uz), Turkish (tr), Tagalog (tl), Talysh
  language (tly) and Uyghur in Arabic script (ug-arab)
* NEW: Does not ask to download remote catalogs if user is offline
* NEW: Option to avoid dialog box asking for indexing (#330)
* NEW: Menu item to launch indexing (#455)
* NEW: Kiwix for Android (#109)

Kiwix 0.9 rc2
* FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
* FIXED: kiwix-install crashes
* FIXED: kiwix-serve memory leak on ARM (ID: 3538663)
* FIXED: Open link in new tab from the right-click contextual menu (ID: 3553735)
* FIXED: Hide bookmarks sidebar in the "library view" (ID: 3555848)
* FIXED: Better landing page loading in kiwix-plug (by introducing ip forwarding)
* FIXED: Unclean Windows Registery after uninstalling (ID: 3467455)
* FIXED: Problems in creating PDF/HTML from tabs (#362)
* FIXED: Kiwix crashes on MS/Windows with "special" files (#317)
* FIXED: 0.9rc1 broken Drag&Drop of files (regression)
* FIXED: Multiple bugs impacting kiwix-plug scripts
* FIXED: Server URL computation - was buggy in a few special cases (#363)
* FIXED: *.zimaa files management (improved)
* FIXED: Indexing progression computation (more accurate)
* FIXED: "verbose" mode in kiwix-install, kiwix-index and kiwix-serve
* FIXED: Ugly 16x16 kiwix icon
* FIXED: Broken suggestion/search textbox with “syllable input mode”
* FIXED: Buggy kiwix-manage remove feature
* FIXED: Internet Explorer compatibility with kiwix-serve.