@@ -18,6 +18,7 @@ Kiwix 0.9 rc3
 * FIXED: Encoding issue in kiwix-serve 404 error message
 * FIXED: Abstruse index names (#84)
 * FIXED: Compilation configuration for Gecko SDK 17+
+* FIXED: kiwix-serve index page for chrome/chromium
 * NEW: New supported user interface languages: Chuvash (cv), Fiji
   Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
   Sanskrit (sa), Uzbek (uz), Turkish (tr), Tagalog (tl), Talysh
